# PopFrame

./: .buildinfo  .gitignore  README.rst  about_us.html  api_test.ipynb  genindex.html  index.html  karkas_test.ipynb  main.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  test_area.ipynb  test_carkas.ipynb  test_city_count.ipynb  test_karkas_v2.ipynb  test_urban copy.ipynb
.doctrees/: about_us.doctree  environment.pickle  index.doctree
.doctrees/api/: index.doctree
.doctrees/examples/: blocks_generator.doctree  index.doctree
.doctrees/popframe/: contributing.doctree  faq.doctree  index.doctree
.github/workflows/: documentation.yml  main.yml
_modules/: index.html
_sources/: index.rst.txt
_sources/examples/: blocks_generator.nblink.txt
_sources/popframe/: index.rst.txt
api/: index.html
api/_autosummary/: popframe.method.base_method.html  popframe.method.html  popframe.method.popuation_frame.html  popframe.method.territory_evaluation.html  popframe.method.urbanisation_level.html  popframe.models.geodataframe.html  popframe.models.html  popframe.models.region.html  popframe.models.territory.html  popframe.models.town.html  popframe.preprocessing.html  popframe.preprocessing.level_filler.html  popframe.preprocessing.population_filler.html  popframe.preprocessing.utils.html
app/: __init__.py
docs/: requirements.txt
docs/source/: about_us.rst  conf.py  index.rst
examples/: agglomeration.ipynb  api.ipynb  api_test.ipynb  blocks_generator.html  data_preparation.ipynb  evaluate_territory_location.ipynb  graph.geojson  hex.ipynb  index.html  karkas_test.ipynb  landuse_assessment.ipynb  pipeline.ipynb  piplynie.ipynb  population_criterion.ipynb  population_criterion_hex.ipynb  region_frame_model copy.ipynb  region_frame_model.ipynb  sld_karkas.ipynb  territorial_potential.ipynb  test_carkas.ipynb  test_city_count.ipynb  test_urban copy.ipynb
examples/methods/: index.html
popframe/: contributing.html  faq.html  index.html
popframe/method/: aglomeration.py  landuse_assessment.py  (+3 more)
tests/: test_blocks.py  test_city_model.py  test_preprocessing.py
(+57 files in other folders)
