[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "popframe"
version = "0.0.9"
authors = [
    # { name = "", email = "" }, # TODO add authors
]
description = "Provision assessment for cities of an urban region"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENCE.md" }

dependencies = [
    "geopandas==0.13.0",
    "retrying==1.3.4",
    "contextily",
    "mapclassify==2.6.1",
    "matplotlib==3.7.1",
    "matplotlib-inline==0.1.6",
    "networkx==3.1",
    "numpy==1.23.5",
    "osmnx==1.6.0",
    "pandas==1.5.3",
    "pyarrow==12.0.0",
    "pydantic==2.7.2",
    "pylint==2.17.4",
    "requests==2.31.0",
    "scikit-learn==1.2.2",
    "scipy==1.10.1",
    "shapely==2.0.1",
    "six==1.16.0",
    "tqdm==4.65.0",
    "seaborn==0.12.2",
    "folium==0.14.0",
    "dill==0.3.8" 
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]

[tool.setuptools.packages.find]
include = ["popframe*"]


[project.optional-dependencies]
dev = [
    "black[jupyter]>=22",
    "isort>=5.6",
    "pylint>=2.17",
    "pre-commit>=3.1",
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "sphinx==6.2.1",
    "sphinx-book-theme==1.0.1",
    "nbsphinx==0.9.3",
    "nbsphinx-link==1.3.0",
    "numpydoc==1.5.0",
    "autodocsumm==0.2.12",
    "myst_parser>=3.0.0,<4.0.0",
    "sphinx_rtd_theme>=1.2.0,<2.0.0",
    "pandoc>=2.0.0,<3.0.0",
]


[project.urls]
"Repository" = "https://github.com/Mvin8/PopFrame/"
"Bug Tracker" = "https://github.com/Mvin8/PopFrame/issues"


[tool.black]
line-length = 120
target-version = ['py310']

[tool.pylint.format]
max-line-length = 120
expected-line-ending-format = "LF"

[tool.pylint.main]
extension-pkg-allow-list = ["pydantic"]

[tool.pycodestyle]
max-line-length = 120


[tool.isort]
lines_after_imports = 2
multi_line_output = 3
line_length = 120
include_trailing_comma = true
